--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "koa": "^2.11.0",
     "koa-body": "^4.1.1",
     "koa-multer": "^1.0.2",
-    "koa-router": "^8.0.8",
-    "sqlite3": "^4.1.1",
-    "stream": "^0.0.2"
+    "koa-router": "^8.0.8"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
